--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -31,3 +31,16 @@ p,
 button {
   line-height: 1.4rem;
 }
+
+.form-control .error {
+  border: 0.0625em solid rgb(153, 63, 63);
+  color: rgb(153, 63, 63);
+}
+
+.form-control .error ::placeholder {
+  color: rgb(153, 63, 63);
+}
+
+.error-message {
+  color: rgb(153, 63, 63);
+}
