--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -63,3 +63,7 @@ button {
   color: rgb(227, 214, 214);
   pointer-events: none;
 }
+
+.slider {
+  border-bottom: 0.0625em solid rgb(126, 121, 121);
+}
